<resources>
    <string name="app_name">MyFilmList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_by_name_tag">Search by name</string>
    <string name="make_a_review_tag">Make a review</string>
    <string name="logo_image">logo image</string>
    <string name="error_field_required">The title is required</string>
    <string name="error_invalid_title">The title is ivalid</string>
    <string name="typePreview">Type</string>
    <string name="titlePreview">Title</string>
    <string name="yearPreview">Year</string>
    <string name="title_activity_seach">Search</string>
    <string name="hint">Title of the film</string>
    <string name="posterDescription">film poster</string>
    <string name="review_button">Add review</string>
    <string name="go_search_button">Go to search by name</string>
    <string name="no_films_tag">No films added, try to add one!</string>
    <string name="no_films_logo">No films logo</string>
    <string name="textexample">TextExample</string>
    <string name="add_icon">Add icon</string>
</resources>
