<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:foreground="?android:attr/selectableItemBackground">


    <LinearLayout
        android:id="@+id/linearPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterPreview"
            android:layout_width="70dp"
            android:layout_height="105dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/posterDescription"
            tools:srcCompat="@tools:sample/avatars[3]" />
    </LinearLayout>


    <TextView
        android:id="@+id/titlePreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/typePreview"
        android:layout_toEndOf="@+id/linearPreview"
        android:ellipsize="end"
        android:gravity="start|center"
        android:maxLines="2"
        android:text="@string/titlePreview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPreview"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/yearPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlePreview"
        android:layout_alignStart="@+id/titlePreview"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/yearPreview"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/typePreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:text="@string/typePreview"
        android:textSize="24sp"/>


    <ImageButton
        android:id="@+id/imageButtonAdd"
        style="@android:style/Widget.Material.Button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_icon" />


</RelativeLayout>